welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
	if (estSurBiscuit) { vuBiscuit = true}
                                       ^Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
	else { avance()}
                     ^