welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	var vuBiscuit:Boolean = false
	if (estSurBiscuit) { vuBiscuit = true}
	else { avance()}

}